--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>site teste de repositório</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam dolor, voluptatum explicabo non a nihil harum aut odit eveniet error iure illo asperiores aliquam, sapiente dolorum, animi libero qui accusamus.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo eos assumenda aut quas ut facere debitis voluptatibus temporibus nemo explicabo est accusamus itaque laudantium nisi quae quisquam expedita, eaque distinctio!</p>
 </body>
 </html>
